// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`injectGlobal basic 1`] = `
"html {
  background: pink;
}

html.active {
  background: red;
}"
`;

exports[`injectGlobal interpolated value 1`] = `
"body {
  color: yellow;
  margin: 0;
  padding: 0;
}"
`;

exports[`injectGlobal nested interpolated media query 1`] = `
"@media (max-width:600px) {
  body {
    display: -webkit-box;
    display: -webkit-flex;
    display: -ms-flexbox;
    display: flex;
  }
}"
`;

exports[`injectGlobal random interpolation 1`] = `
".css-fpv6pr-cls {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

body {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}"
`;

exports[`injectGlobal with @font-face 1`] = `
"@font-face {
  font-family: 'Patrick Hand SC';
  font-style: normal;
  font-weight: 400;
  src: local('Patrick Hand SC'),local('PatrickHandSC-Regular'),url(https://fonts.gstatic.com/s/patrickhandsc/v4/OYFWCgfCR-7uHIovjUZXsZ71Uis0Qeb9Gqo8IZV7ckE.woff2) format('woff2');
  unicode-range: U+0100-024f,U+1-1eff,U+20a0-20ab,U+20ad-20cf,U+2c60-2c7f,U+A720-A7FF;
}"
`;
